--- a/EqUi_UtilManger/App.config
+++ b/EqUi_UtilManger/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
+  <connectionStrings>
+    <!--this is the MAIN connection string for EQUI (site specfic)-->
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
