--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -8,9 +8,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
-    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW" connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"/>
-    <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+      <!--this is the MAIN connection string for EQUI (site specfic)-->
+      <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
+      <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
