--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -5,6 +5,7 @@
   <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net46" />
   <package id="d3" version="5.4.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.10" targetFramework="net46" />
   <package id="Hangfire" version="1.6.19" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.6.19" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.6.19" targetFramework="net46" />
@@ -42,6 +43,8 @@
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="Spin.js" version="2.3.2.1" targetFramework="net46" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net46" />
+  <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net46" />
+  <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
