--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -1262,6 +1262,7 @@
     <Content Include="Areas\Alert\Views\ControlChart\_GetControlChart.cshtml" />
     <Content Include="Areas\Alert\Views\ControlChart\GetControlChart.cshtml" />
     <Content Include="Areas\Alert\Views\L_controlLimits\_List.cshtml" />
+    <Content Include="Areas\Alert\Views\Alert\_ControlChart.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION.pubxml" />
     <None Include="Properties\PublishProfiles\VCC22700-Testing.pubxml" />
     <Content Include="PDFjs\build\pdf.js" />
