--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -424,6 +424,7 @@
     <Compile Include="Areas\user_management\Controllers\usersController.cs" />
     <Compile Include="Areas\user_management\Controllers\UserScreensController.cs" />
     <Compile Include="Areas\user_management\Controllers\usersPermisionsController.cs" />
+    <Compile Include="Areas\user_management\Models\cultures.cs" />
     <Compile Include="Areas\user_management\Models\c_areas.cs">
       <DependentUpon>user_management.tt</DependentUpon>
     </Compile>
@@ -651,6 +652,16 @@
     <Compile Include="Areas\user_management\roleProvider.cs" />
     <Compile Include="Models\l_dummyLogClassResult.cs">
       <DependentUpon>EQUIModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\defaultArea.nl-be.Designer.cs">
+      <DependentUpon>defaultArea.nl-be.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Resources\defaultArea.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>defaultArea.resx</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -1482,6 +1493,16 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\defaultArea.nl-be.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>defaultArea.nl-be.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\defaultArea.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>defaultArea.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
