--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="EntityFramework.MappingAPI" version="6.1.0.10" targetFramework="net46" />
   <package id="Hangfire" version="1.6.19" targetFramework="net46" />
+  <package id="Hangfire.Console" version="1.4.0" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.6.19" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.6.19" targetFramework="net46" />
   <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net46" />
