changed for digibord

--- a/EqUiDigibordLauncher/EqUiDigibordLauncher.csproj
+++ b/EqUiDigibordLauncher/EqUiDigibordLauncher.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\gnlsnm0101.gen.volvocars.net\proj\6308-SHR-VCC22700\LegancyTools\DEPLOYMENTBASE\EqUiDigibordLauncher\</PublishUrl>
+    <PublishUrl>\\GENSVW1178\gensvw1178_GADATA_ProductionRoot\IIS\EqUiWebUi\EqUi_DigibordLauncher\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -27,8 +27,10 @@
     <ProductName>EquidigibordLauncher</ProductName>
     <PublisherName>SDEBEUL</PublisherName>
     <SuiteName>EQUI</SuiteName>
+    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
+    <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>11</ApplicationRevision>
+    <ApplicationRevision>14</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
