--- a/ABBCommTest/App.config
+++ b/ABBCommTest/App.config
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
 
+  <connectionStrings>
+    <!--this is the MAIN connection string for EQUI (site specfic)-->
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
+
   <log4net>
-
-
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="ABB.log" />
       <appendToFile value="true" />
