fixes to config profiles

--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -1269,8 +1269,8 @@
     <Content Include="Areas\Alert\Views\Alert\_ControlChart.cshtml" />
     <Content Include="App_Code\MyHtmlHelpers.cshtml" />
     <Content Include="Areas\Welding\Views\Welding\ExtraControlers.cshtml" />
-    <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-GHENT.pubxml" />
-    <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-ZWEDEN.pubxml" />
+    <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
+    <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
     <None Include="Properties\PublishProfiles\VCC22700-Testing.pubxml" />
     <Content Include="PDFjs\build\pdf.js" />
     <Content Include="PDFjs\build\pdf.worker.js" />
@@ -1413,12 +1413,6 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -1480,13 +1474,10 @@
     <Content Include="Views\Wikis\ShowWiki.cshtml" />
     <Content Include="Views\Tableau\TestTicket.cshtml" />
     <Content Include="Views\Tableau\GetTicket.cshtml" />
-    <None Include="Web.DebugGENT.config">
+    <None Include="Web.Rel_GA.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <None Include="Web.ReleaseGENT.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.ReleaseZWEDEN.config">
+    <None Include="Web.Rel_TA.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
@@ -1524,15 +1515,6 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
