changed publish location

--- a/EqUi_UtilManger/EqUi_UtilManager.csproj
+++ b/EqUi_UtilManger/EqUi_UtilManager.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>\\GENSVW1178\gensvw1178_GADATA_ProductionRoot\IIS\EqUiWebUi\EqUi_UtilManager\</PublishUrl>
+    <PublishUrl>\\GENSVW1178\gensvw1178_D\IIS\EqUiWebUi\EqUi_UtilManager\</PublishUrl>
     <Install>false</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -30,7 +30,7 @@
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <TrustUrlParameters>true</TrustUrlParameters>
-    <ApplicationRevision>92</ApplicationRevision>
+    <ApplicationRevision>93</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
